[package]
authors = ["Alec Savvy <alecsavvy@outlook.com>"]
edition = "2018"
name = "tokio_data"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.22", features = ["full"]}
tokio-macros = "0.2.5"
